# Reinforced-Slicer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
References/: AGENTS.md  KNOWLEDGE.md  README.md  SOFTWARE_INDEX.md  bibliography.csv  bibliography.md  gaps_and_next_steps.md  overview.md
src/reinforced_slicer/: __init__.py  cli.py
src/reinforced_slicer/fea/: __init__.py
src/reinforced_slicer/gui/: __init__.py  app.py  gcode_stats.py  launcher.py  serialize.py  tetmesh_from_stl.py
src/reinforced_slicer/io/: __init__.py
src/reinforced_slicer/kinematics/: __init__.py  ac_table.py  machine.py  singularity.py
src/reinforced_slicer/mesh/: __init__.py  isosurface.py  tet.py  tetmesh_backends.py  triangle2d.py
src/reinforced_slicer/pathing/: __init__.py  curved.py  direction_field.py  fiber.py  iso_curves.py  stripe_field.py  zigzag.py
src/reinforced_slicer/postproc/: __init__.py  gcode.py  gcode_5axis.py
src/reinforced_slicer/slicing/: __init__.py  curved_5axis.py  curvi_2d.py  curvi_3d.py  planar.py
src/reinforced_slicer/viz/: __init__.py
tests/: test_curved_path.py  test_curved_pipeline.py  test_curvi_2d.py  test_curvi_3d.py  test_fiber_paths.py  test_gcode_5axis.py  test_gui_compare.py  test_gui_repair.py  test_gui_serialize.py  test_gui_v2.py  test_isosurface.py  test_kinematics.py  test_planar_slicer.py  test_tet_mesh.py  test_tetmesh_backends.py  test_zigzag.py
